archivos adaptados para paginacion
